feat(email-sending): Implemented security enhancements (rate limiting, replaced User entity with UserPrincipal in controller params), Unified string responses from API into 1 DTO as well as Error handling, Implemented cron jobs for the token cleanup